Fix view on mobile devices

--- a/css/hovereffect.css
+++ b/css/hovereffect.css
@@ -72,10 +72,10 @@ html.can-hover .hovereffect:hover h2 {
 }
 
 .hovereffect hr {
-  width: 60%;
+  width: 80%;
   height: 4px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
   color: #000;
   background-color: #000;
   text-align: center;
